assets/x1/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: in-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: svc-api
      port:
        number: 3000
  rules:
  - host: api.kube1.kubelabs.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-api
            port:
              number: 3000
